Pretty blog format

--- a/pages/blog/javascript-fatigue.mdx
+++ b/pages/blog/javascript-fatigue.mdx
@@ -57,7 +57,7 @@ An example of this can be seen in [Mark Dalgleish](https://medium.com/u/d7225e72
 
 Alone, the APIs are small, but even less than a handful yield a nearly incomprehensible mess of code to each new set of eyes.
 
-Even if contained in a “boilerplate” project, scaffolded by a generator, or tucked away in a _finalCreateStorev3SeriousThisTime.js_ file, we’ve created a rat’s nest of wiring that would make WordPress plugins blush.
+Even if contained in a “boilerplate” project, scaffolded by a generator, or tucked away in a `finalCreateStorev3SeriousThisTime.js` file, we’ve created a rat’s nest of wiring that would make WordPress plugins blush.
 
 #### More Abstractions. Less Code.
 
