--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,3 +1,42 @@
-# Blog
+#### Open-Source Projects
 
-...
+- [polydev](https://github.com/ericclemmons/polydev)
+
+  Faster, route-centric development for Node.js apps with built-in Hot Module Replacement.
+
+- [node-recorder](https://github.com/ericclemmons/node-recorder)
+
+  Simple recording & replaying of HTTP requests for predictable development & testing.
+
+- [per-env](https://github.com/ericclemmons/per-env)
+
+  Clean up your package.json with per-NODE_ENV npm scripts
+
+- [react-resolver](https://github.com/ericclemmons/react-resolver)
+
+  Async rendering & data-fetching for universal React applications.
+
+- [npm-install-webpack-plugin](https://github.com/webpack-contrib/npm-install-webpack-plugin)
+
+  Speed up development by automatically installing & saving dependencies with Webpack.
+
+- [start-server-webpack-plugin](https://github.com/ericclemmons/start-server-webpack-plugin)
+
+  Automatically start your server once Webpack's build completes.
+
+#### Blog
+
+- [JavaScript Fatigue](/blog/javascript-fatigue)
+
+  A few days ago, I met up with a friend & peer over coffee.
+
+  > Saul: “How’s it going?” Me: “Fatigued.” Saul: “Family?” Me: “No, Javascript.”
+
+  More accurately, I meant React and the Javascript ecosystem that comes with it.
+
+Testing some text.
+Testing some text.
+Testing some text.
+Testing some text.
+Testing some text.
+Testing some text.
