--- a/components/Navigation/about.mdx
+++ b/components/Navigation/about.mdx
@@ -5,7 +5,7 @@ import { SocialIcon } from "react-social-icons";
   <a>
     <img
       alt="Picture of Eric Celmmons"
-      className="rounded-full w-full border-4 shadow-md mb-4"
+      class="rounded-full w-full border-4 shadow-md mb-4"
       src="https://github.com/ericclemmons.png"
     />
   </a>
@@ -13,32 +13,41 @@ import { SocialIcon } from "react-social-icons";
 
 Hi, I'm **Eric Clemmons**.
 
-I create better user & developer experiences through open-source software,
-metrics-driven experiments, and reducing friction.
+<!-- I create better user & developer experiences through open-source software, metrics-driven experiments, and reducing friction. -->
 
 I specialize in building **remote teams** developing **full-stack applications**
 with technologies such as TypeScript, React, & GraphQL that enable metrics-driven **experimentation**.
 
 <p>
-  <button className="bg-white rounded-full p-px shadow hover:shadow-md text-black mr-2">
+  <button class="rounded-full shadow hover:shadow-md text-black mr-2 border-2 border-white hover:border-yellow-200">
     <SocialIcon
-      bgColor="black"
+      bgColor="#44337a"
       fgColor="white"
-      url="https://github.com/ericclemmons"
       style={{ width: "2rem", height: "2rem" }}
+      url="mailto:eric@clemmons.family?subject=I was on your website..."
     />
   </button>
 
-<button className="bg-white rounded-full p-px shadow hover:shadow-md text-black mr-2">
+<button class="rounded-full shadow hover:shadow-md text-black mr-2 border-2 border-white hover:border-yellow-200">
   <SocialIcon
+    bgColor="black"
     fgColor="white"
-    url="https://twitter.com/ericclemmons"
     style={{ width: "2rem", height: "2rem" }}
+    url="https://github.com/ericclemmons"
   />
 </button>
 
-  <button className="bg-white rounded-full p-px shadow hover:shadow-md text-black mr-2">
+<button class="rounded-full shadow hover:shadow-md text-black mr-2 border-2 border-white hover:border-yellow-200">
+  <SocialIcon
+    fgColor="white"
+    style={{ width: "2rem", height: "2rem" }}
+    url="https://twitter.com/ericclemmons"
+  />
+</button>
+
+  <button class="rounded-full shadow hover:shadow-md text-black mr-2 border-2 border-white hover:border-yellow-200">
     <SocialIcon
+      fgColor="white"
       url="https://linkedin.com/in/ericclemmons"
       style={{ width: "2rem", height: "2rem" }}
     />
