Keep profile pic proportional

--- a/components/Navigation/about.mdx
+++ b/components/Navigation/about.mdx
@@ -5,7 +5,7 @@ import { SocialIcon } from "react-social-icons";
   <a>
     <img
       alt="Picture of Eric Celmmons"
-      class="rounded-full w-full border-4 shadow-md mb-4"
+      class="rounded-full border-4 shadow-md mb-4 w-56 h-56"
       src="https://github.com/ericclemmons.png"
     />
   </a>
