--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,4 +1,4 @@
-#### Open-Source Projects
+## Open-Source Projects
 
 - [polydev](https://github.com/ericclemmons/polydev)
 
@@ -24,7 +24,7 @@
 
   Automatically start your server once Webpack's build completes.
 
-#### Blog
+## Blog
 
 - [JavaScript Fatigue](/blog/javascript-fatigue)
 
