--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,26 +1,26 @@
 ## Open-Source Projects
 
-- [polydev](https://github.com/ericclemmons/polydev)
+- [`polydev`](https://github.com/ericclemmons/polydev)
 
   Faster, route-centric development for Node.js apps with built-in Hot Module Replacement.
 
-- [node-recorder](https://github.com/ericclemmons/node-recorder)
+- [`node-recorder`](https://github.com/ericclemmons/node-recorder)
 
   Simple recording & replaying of HTTP requests for predictable development & testing.
 
-- [per-env](https://github.com/ericclemmons/per-env)
+- [`per-env`](https://github.com/ericclemmons/per-env)
 
   Clean up your package.json with per-NODE_ENV npm scripts
 
-- [react-resolver](https://github.com/ericclemmons/react-resolver)
+- [`react-resolver`](https://github.com/ericclemmons/react-resolver)
 
   Async rendering & data-fetching for universal React applications.
 
-- [npm-install-webpack-plugin](https://github.com/webpack-contrib/npm-install-webpack-plugin)
+- [`npm-install-webpack-plugin`](https://github.com/webpack-contrib/npm-install-webpack-plugin)
 
   Speed up development by automatically installing & saving dependencies with Webpack.
 
-- [start-server-webpack-plugin](https://github.com/ericclemmons/start-server-webpack-plugin)
+- [`start-server-webpack-plugin`](https://github.com/ericclemmons/start-server-webpack-plugin)
 
   Automatically start your server once Webpack's build completes.
 
