Add frontmatter support

--- a/pages/blog/javascript-fatigue.mdx
+++ b/pages/blog/javascript-fatigue.mdx
@@ -1,3 +1,8 @@
+---
+date: December 26, 2015
+slug: javascript-fatigue
+---
+
 # Javascript Fatigue
 
 A few days ago, I met up with a friend & peer over coffee.
