Fix Link & SocialIcon

--- a/content/about.mdx
+++ b/content/about.mdx
@@ -1,15 +1,10 @@
-// import Link from "next/link";
-// import { SocialIcon } from "react-social-icons";
-
-<Link href="/">
-  <a>
-    <img
-      alt="Picture of Eric Celmmons"
-      className="rounded-full border-4 shadow-md mb-4 w-56 h-56 mx-auto"
-      src="https://github.com/ericclemmons.png"
-    />
-  </a>
-</Link>
+<a href="/">
+  <img
+    alt="Picture of Eric Celmmons"
+    className="rounded-full border-4 shadow-md mb-4 w-56 h-56 mx-auto"
+    src="https://github.com/ericclemmons.png"
+  />
+</a>
 
 Hi, I'm **Eric Clemmons**.
 
