--- a/content/about.mdx
+++ b/content/about.mdx
@@ -2,7 +2,7 @@
   <img
     alt="Picture of Eric Celmmons"
     className="rounded-full border-4 shadow-md mb-4 w-56 h-56 mx-auto"
-    src="https://github.com/ericclemmons.png"
+    src="/eric.jpg"
   />
 </a>
 
