Add timestamp to javascript-fatigue

--- a/content/blog/javascript-fatigue/index.mdx
+++ b/content/blog/javascript-fatigue/index.mdx
@@ -1,5 +1,6 @@
 ---
-date: December 26, 2015
+firstPublishedAt: 1451185295889
+latestPublishedAt: 1451185295889
 slug: javascript-fatigue
 title: Javascript Fatigue
 ---
