Add title + description to home page

--- a/content/index.mdx
+++ b/content/index.mdx
@@ -1,3 +1,8 @@
+---
+title: Eric Clemmons
+description: I specialize in building remote teams & developing full-stack applications with technologies such as TypeScript, React, & GraphQL.
+---
+
 ## Open-Source Projects
 
 <section className="flex flex-wrap -mx-2">
