--- a/content/about.mdx
+++ b/content/about.mdx
@@ -10,7 +10,7 @@ Hi, I'm **Eric Clemmons**.
 
 <!-- I create better user & developer experiences through open-source software, metrics-driven experiments, and reducing friction. -->
 
-I specialize in building **remote teams** developing **full-stack applications**
+I specialize in building **remote teams** & developing **full-stack applications**
 with technologies such as TypeScript, React, & GraphQL that enable metrics-driven **experimentation**.
 
 <p className="flex justify-around mt-4 font-sans text-gray-700">
