--- a/content/blog/work-on-features-not-repositories/index.mdx
+++ b/content/blog/work-on-features-not-repositories/index.mdx
@@ -12,7 +12,7 @@ _Why organizational boundaries shouldn’t change where development happens._
 Recently on Twitter, Kent C. Dodds asked:
 
 <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Hey folks who have a decoupled client-server application (no server rendering, server is just an API server). Where is your client code and server code located?</p>&mdash; Kent C. Dodds (@kentcdodds) <a href="https://twitter.com/kentcdodds/status/1036022955849838592?ref_src=twsrc%5Etfw">September 1, 2018</a></blockquote>
-<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+<script async src="https://platform.twitter.com/widgets.js" charSet="utf-8"></script>
 
 It’s an interesting question, as we often have various reasons to split projects into multiple repositories. (e.g. _if I don’t share code between the client & server, then they should be separated, right?)_
 
