--- a/content/index.mdx
+++ b/content/index.mdx
@@ -1,64 +1,26 @@
 ---
-title: Eric Clemmons
 description: I specialize in building remote teams & developing full-stack applications with technologies such as TypeScript, React, & GraphQL.
 ---
 
 ## Open-Source Projects
 
-<section className="flex flex-wrap -mx-2">
-  <Card
-    href="https://github.com/ericclemmons/polydev"
-    title={<code>polydev</code>}
-  >
-    Faster, route-centric development for Node.js apps with built-in Hot Module
-    Replacement.
-  </Card>
+- [`polydev`](https://github.com/ericclemmons/polydev) – Faster, route-centric development for Node.js apps with built-in Hot Module Replacement.
 
-<Card
-  href="https://github.com/ericclemmons/node-recorder"
-  title={<code>node-recorder</code>}
->
-  <p>
-    Simple recording & replaying of HTTP requests for predictable development &
-    testing.
-  </p>
-</Card>
+- [`benefit`](https://benefit.netlify.com/) – ✨5kB utility CSS library that is compatible with TailwindCSS.
 
-<Card
-  href="https://github.com/ericclemmons/per-env"
-  title={<code>per-env</code>}
->
-  <p>Clean up your package.json with per-NODE_ENV npm scripts.</p>
-</Card>
+- [`node-recorder`](https://github.com/ericclemmons/node-recorder) – Simple recording & replaying of HTTP requests for predictable development & testing.
 
-<Card
-  href="https://github.com/ericclemmons/react-resolver"
-  title={<code>react-resolver</code>}
->
-  <p>Async rendering & data-fetching for universal React applications.</p>
-</Card>
+- [`per-env`](https://github.com/ericclemmons/per-env) – Clean up your package.json with per-NODE_ENV npm scripts.
 
-<Card
-  href="https://github.com/webpack-contrib/npm-install-webpack-plugin"
-  title={<code>npm-install-webpack-plugin</code>}
->
-  <p>
-    Speed up development by automatically installing & saving dependencies with
-    Webpack.
-  </p>
-</Card>
+- [`react-resolver`](https://github.com/ericclemmons/react-resolver) – Async rendering & data-fetching for universal React applications.
 
-  <Card
-    href="https://github.com/ericclemmons/start-server-webpack-plugin"
-    title={<code>start-server-webpack-plugin</code>}
-  >
-    <p>Automatically start your server once Webpack's build completes.</p>
-  </Card>
-</section>
+- [`npm-install-webpack-plugin`](https://github.com/webpack-contrib/npm-install-webpack-plugin) – Speed up development by automatically installing & saving dependencies with Webpack.
+
+- [`start-server-webpack-plugin`](https://github.com/ericclemmons/start-server-webpack-plugin) – Automatically start your server once Webpack's build completes.
 
 ## Blog
 
-<section className="flex flex-wrap -mx-2">
+<section>
   {posts.map(({ href, title, snippet }) => (
     <Card cta="Read →" href={href} title={title}>
       {snippet}
