Fix react attribute names

--- a/content/blog/dogfooding-your-open-source-projects/index.mdx
+++ b/content/blog/dogfooding-your-open-source-projects/index.mdx
@@ -65,7 +65,7 @@ With Webpack, it’s trivial:
   width="0"
   height="0"
   src=""
-  frameborder="0"
+  frameBorder="0"
   allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
   allowFullScreen
 />
