--- a/content/blog/hydra-a-precursor-to-graphql/index.mdx
+++ b/content/blog/hydra-a-precursor-to-graphql/index.mdx
@@ -88,7 +88,7 @@ For example, this is how the query, UI, and warehousing was handled for the stat
   width="0"
   height="0"
   src=""
-  frameborder="0"
+  frameBorder="0"
   allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
   allowFullScreen
 />
