--- a/content/blog/i-ditched-my-iphone-for-the-google-pixel/index.mdx
+++ b/content/blog/i-ditched-my-iphone-for-the-google-pixel/index.mdx
@@ -15,13 +15,13 @@ As a software developer, I’m constantly looking to improve some sort of **expe
 
 When my daily usage of my iPhone (6s) started to have more annoyances than _delights_, I decided to embark on a rather expensive test.
 
-<blockquote class="twitter-tweet"><p lang="en" dir="ltr">Giving Google Pixel a 2-week attempt at replacing my iPhone. So far, UX is much better! <a href="https://t.co/4AoEWqCmWi">pic.twitter.com/4AoEWqCmWi</a></p>&mdash; Eric Clemmons (@ericclemmons) <a href="https://twitter.com/ericclemmons/status/801606792052670464?ref_src=twsrc%5Etfw">November 24, 2016</a></blockquote>
-<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+<blockquote className="twitter-tweet"><p lang="en" dir="ltr">Giving Google Pixel a 2-week attempt at replacing my iPhone. So far, UX is much better! <a href="https://t.co/4AoEWqCmWi">pic.twitter.com/4AoEWqCmWi</a></p>&mdash; Eric Clemmons (@ericclemmons) <a href="https://twitter.com/ericclemmons/status/801606792052670464?ref_src=twsrc%5Etfw">November 24, 2016</a></blockquote>
+<script async src="https://platform.twitter.com/widgets.js" charSet="utf-8"></script>
 
 Less than a week of constant use (timed perfectly for constant photo & video snapping over the Thanksgiving holiday), I’d made the decision to switch.
 
-<blockquote class="twitter-tweet"><p lang="en" dir="ltr">Well, that didn&#39;t take long.  Transferring my number and getting rid of my iPhone / Watch. 👋 <a href="https://t.co/2DtZW2QxWp">https://t.co/2DtZW2QxWp</a></p>&mdash; Eric Clemmons (@ericclemmons) <a href="https://twitter.com/ericclemmons/status/802957663416057856?ref_src=twsrc%5Etfw">November 27, 2016</a></blockquote>
-<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+<blockquote className="twitter-tweet"><p lang="en" dir="ltr">Well, that didn&#39;t take long.  Transferring my number and getting rid of my iPhone / Watch. 👋 <a href="https://t.co/2DtZW2QxWp">https://t.co/2DtZW2QxWp</a></p>&mdash; Eric Clemmons (@ericclemmons) <a href="https://twitter.com/ericclemmons/status/802957663416057856?ref_src=twsrc%5Etfw">November 27, 2016</a></blockquote>
+<script async src="https://platform.twitter.com/widgets.js" charSet="utf-8"></script>
 
 ### In a nutshell, the Google ecosystem is a perpetually positive user experience. Apple’s is getting as bad as iTunes.
 
