--- a/content/index.mdx
+++ b/content/index.mdx
@@ -4,6 +4,8 @@ description: I specialize in building remote teams & developing full-stack appli
 
 ## Open-Source Projects
 
+![Illustration of projects](undraw_portfolio_update_nqhs.svg)
+
 - [`polydev`](https://github.com/ericclemmons/polydev) – Faster, route-centric development for Node.js apps with built-in Hot Module Replacement.
 
 - [`benefit`](https://benefit.netlify.com/) – ✨5kB utility CSS library that is compatible with TailwindCSS.
@@ -19,6 +21,8 @@ description: I specialize in building remote teams & developing full-stack appli
 - [`start-server-webpack-plugin`](https://github.com/ericclemmons/start-server-webpack-plugin) – Automatically start your server once Webpack's build completes.
 
 ## Blog
+
+![Illustration of a page](undraw_online_page_cq94.svg)
 
 <section>
   {posts.map(({ attributes, href, Snippet }) => (
