Fix legacy markup

--- a/content/blog/angular-trust-filter/index.mdx
+++ b/content/blog/angular-trust-filter/index.mdx
@@ -10,7 +10,7 @@ It seems every Angular project I write, at some point, sees the error:
 
 > `Attempting to use an unsafe value in a safe context.`
 
-This is because of Angular's [\$sce][1] service, which _enabled_ by default:
+This is because of Angular's [`$sce`][1] service, which _enabled_ by default:
 
 > SCE assists in writing code in way that (a) is secure by default and (b) makes auditing for security vulnerabilities such as XSS, clickjacking, etc. a lot easier.
 
