--- a/content/blog/hydra-a-precursor-to-graphql/index.mdx
+++ b/content/blog/hydra-a-precursor-to-graphql/index.mdx
@@ -121,7 +121,7 @@ For example, this is how the query, UI, and warehousing was handled for the stat
 
 Sadly, we abandoned that project in favor of other initiatives that, frankly, impacted users at a much larger scale. **The tech was exciting, but the application wasn’t.**
 
-Today, we recognize & leverage GraphQL as the architectural successor to what we needed a few years earlier: **\*a performant, version-less API centered around the needs of individual views**, not their aggregat\*e.
+Today, we recognize & leverage GraphQL as the architectural successor to what we needed a few years earlier: **a performant, version-less API centered around the needs of individual views**, not their aggregate.
 
 ---
 
