--- a/content/blog/react-event-preventdefault/index.mdx
+++ b/content/blog/react-event-preventdefault/index.mdx
@@ -95,4 +95,4 @@ I’m genuinely surprised that this expectation of event handling is quietly bro
 
 I would have expected that, since events are turned into **SyntheticEvents**, the **event.preventDefault() **and **event.stopPropagation()** would call **console.warn** or **console.error** due to the break in functionality.
 
-I hope this is more of an edge-case due to our forms \*actually submitting when the user presses **Enter\***, and not a situation others come across unwittingly.
+I hope this is more of an edge-case due to our forms _actually submitting when the user presses **Enter**_, and not a situation others come across unwittingly.
