--- a/content/blog/teaching-react-without-using-react/index.mdx
+++ b/content/blog/teaching-react-without-using-react/index.mdx
@@ -124,7 +124,7 @@ The selling points of React in comparison to the Vanilla Widget were:
 
 The *Ah-hah! *moment for the group was watching the DOM get completely destroyed & faithfully re-rendered **purely **from the _state._
 
-Although, when you think about it, **this is already how PHP & server-side rendering works**: the request comes in, the view references the current state of the request (e.g. _\$\_GET_ & _\$\_POST_), returns the output, rinse & repeat.
+Although, when you think about it, **this is already how PHP & server-side rendering works**: the request comes in, the view references the current state of the request (e.g. `$_GET` & `$_POST`), returns the output, rinse & repeat.
 
 > I’ve spoken about this very topic at Space City JS: [https://github.com/ericclemmons/mvc-to-react](https://github.com/ericclemmons/mvc-to-react)
 
