Template uses front-matter

--- a/template/content/index.mdx
+++ b/template/content/index.mdx
@@ -1,4 +1,7 @@
-# Hello, `mdx-site`!
+---
+title: Hello, `mdx-site`
+description: My site.
+---
 
 Here is an example of JSX embedded in Markdown:
 
