--- a/template/content/index.mdx
+++ b/template/content/index.mdx
@@ -14,7 +14,7 @@ description: My site.
 
 1. Add pages to `content/:page/index.mdx`
 
-1. `export` data via `content/:page/index.js`
+1. `export` data via `content/:page/index.tsx`
 
 1. Customize HTML template: `public/index.html`
 
